# Learning-Web-UI

./: .gitignore
MCP/mcp-client-typescript/: index.ts  package-lock.json  package.json
MCP/weather/: package.json
MCP/weather/src/: index.ts
frontend/react-integrated-monorepo/: README.md  nx.json  package-lock.json  package.json
frontend/react-mono/: README.md  nx.json  package-lock.json  package.json
frontend/react-template-mono/: README.md  index.html  nx.json  package-lock.json  package.json  project.json
frontend/react-template-mono/e2e/: project.json
frontend/react-template-mono/react-template-mono-2-e2e/: project.json
frontend/server-sent-events/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/tailwind/: package-lock.json  tailwind.config.js
frontend/tailwind/public/: index.html  output.css
frontend/tailwind/src/: styles.css
go/greetings/: go.mod  greetings.go
go/hello/: go.mod
rust/: Cargo.toml
rust/app/: Cargo.toml
rust/app/src/: arr.rs  lib.rs  main.rs  my_struct.rs  shape.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/grpc/: Cargo.toml  build.rs
rust/grpc/proto/: calculator.proto
rust/grpc/src/: client.rs  server.rs
rust/guess/: Cargo.toml
rust/guess/src/: main.rs
rust/guessing_game/src/: main.rs
rust/hello-rust/: Cargo.toml
rust/hello-rust/src/: main.rs
rust/my-redis/: Cargo.toml
rust/my-redis/src/: main.rs
rust/tkio/: Cargo.toml
rust/tkio/src/: main.rs
server-sent-events/: README.md
server-sent-events/src/: App.vue  main.ts
tailwind/: package.json
(+25 files in other folders)
